--- a/fr/index.html
+++ b/fr/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -115,7 +115,6 @@
                     <button class="video__button" data-youtube-button="https://www.youtube-nocookie.com/embed/pBznaCTKOeM"></button>
                 </div>
             </div>
-            <!-- <iframe class="video" src="https://www.youtube-nocookie.com/embed/pBznaCTKOeM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
             <p class="credits">Projet réalisé avec Augustin de Soras et Jade Roche.</p> 
             <h3>Marmota</h3>
             <p class="caption">Workshop Arcade & craft & alternative controller (projet école) · Janvier 2023 · 4 jours · 5 personnes</p>
