--- a/en/index.html
+++ b/en/index.html
@@ -19,7 +19,7 @@
             <li><a class="anchor" href="" data-id="crous" data-color="#ffffff"> Crous’tillant </a></li>
             <li><a class="anchor" href="" data-id="nmdmp" data-color="#e6b2d1"> Nantes </a></li>
             <li><a class="anchor" href="" data-id="popbusters" data-color="#f0c2c2"> Popbusters </a></li>
-            <li><a class="anchor" href="" data-id="interactive" data-color="#e0f9b0"> Interactif </a></li>
+            <li><a class="anchor" href="" data-id="interactive" data-color="#e0f9b0"> Interactive </a></li>
         </ul>
     </nav>
 
