--- a/en/index.html
+++ b/en/index.html
@@ -14,7 +14,7 @@
 <body>
     <nav>
         <ul>
-            <p> <span>Projets</span> </p>
+            <p> <span>Projects</span> </p>
             <li><a class="anchor" href="" data-id="proginov" data-color="#b6c8de"> Proginov </a></li>
             <li><a class="anchor" href="" data-id="crous" data-color="#ffffff"> Crous’tillant </a></li>
             <li><a class="anchor" href="" data-id="nmdmp" data-color="#e6b2d1"> Nantes </a></li>
